# kollision

./: .flatpak-manifest.json  .kateconfig  .kde-ci.yml  CMakeLists.txt  Messages.sh  animation.cpp  animation.h  animator.cpp  animator.h  audioplayer.cpp  audioplayer.h  ball.cpp  ball.h  button.cpp  button.h  kollision.desktop  kollision.kcfg  kollisionconfig.kcfgc  kollisionui.rc  main.cpp  mainarea.cpp  mainarea.h  mainwindow.cpp  mainwindow.h  message.cpp  message.h  org.kde.kollision.appdata.xml  org.kde.kollision.desktop  preferences.ui  renderer.cpp  renderer.h  snapcraft.yaml  sprite.h  spritefwd.h
doc/: CMakeLists.txt  index.docbook
pictures/: CMakeLists.txt  oxsc-apps-kollision.svgz  theme.desktop  theme.svgz
pictures/hi/: CMakeLists.txt
pictures/ox/: CMakeLists.txt
po/ar/: kollision.po
po/ast/: kollision.po
po/bg/: kollision.po
po/bs/: kollision.po
po/ca/: kollision.po
po/ca/docs/kollision/: index.docbook
po/ca@valencia/: kollision.po
po/cs/: kollision.po
po/cs/docs/kollision/: index.docbook
po/da/: kollision.po
po/de/: kollision.po
po/de/docs/kollision/: index.docbook
po/el/: kollision.po
po/en_GB/: kollision.po
po/eo/: kollision.po
po/es/: kollision.po
po/es/docs/kollision/: index.docbook
po/et/: kollision.po
po/et/docs/kollision/: index.docbook
po/eu/: kollision.po
po/fi/: kollision.po
po/fr/: kollision.po
po/fr/docs/kollision/: index.docbook
po/ga/: kollision.po
po/gl/: kollision.po
po/gu/: kollision.po
po/he/: kollision.po
po/hi/: kollision.po
po/hr/: kollision.po
po/hu/: kollision.po
po/ia/: kollision.po
po/id/: kollision.po
po/id/docs/kollision/: index.docbook
po/is/: kollision.po
po/it/: kollision.po
po/it/docs/kollision/: index.docbook
po/ja/: kollision.po
po/ja/docs/kollision/: index.docbook
po/ka/: kollision.po
po/kk/: kollision.po
po/km/: kollision.po
po/ko/: kollision.po
po/lt/: kollision.po
po/lv/: kollision.po
po/mai/: kollision.po
po/ml/: kollision.po
po/mr/: kollision.po
po/nb/: kollision.po
po/nds/: kollision.po
po/nl/: kollision.po
po/nl/docs/kollision/: index.docbook
po/nn/: kollision.po
po/nn/docs/kollision/: index.docbook
po/pa/: kollision.po
po/pl/: kollision.po
po/pl/docs/kollision/: index.docbook
po/pt/: kollision.po
po/pt/docs/kollision/: index.docbook
po/pt_BR/: kollision.po
po/pt_BR/docs/kollision/: index.docbook
po/ro/: kollision.po
po/ru/: kollision.po
po/sa/: kollision.po
po/sk/: kollision.po
po/sl/: kollision.po
po/sl/docs/kollision/: index.docbook
po/sq/: kollision.po
po/sr/: kollision.po
po/sr@ijekavian/: kollision.po
po/sr@ijekavianlatin/: kollision.po
po/sr@latin/: kollision.po
po/sv/: kollision.po
po/sv/docs/kollision/: index.docbook
po/th/: kollision.po
po/tr/: kollision.po
po/ug/: kollision.po
po/uk/: kollision.po
po/uk/docs/kollision/: index.docbook
po/zh_CN/: kollision.po
po/zh_TW/: kollision.po
sounds/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  animation.cpp  animation.h  animator.cpp  animator.h  ball.cpp  ball.h  kollision.qrc  main.cpp  mainarea.cpp  mainarea.h  mainwindow.cpp  mainwindow.h  message.cpp  message.h  org.kde.kollision.appdata.xml  org.kde.kollision.desktop  preferences.ui  sprite.h  spritefwd.h
themes/: CMakeLists.txt  default.desktop  default.svgz
